--- a/app/src/main/res/layout/fragment_profile.xml
+++ b/app/src/main/res/layout/fragment_profile.xml
@@ -427,7 +427,9 @@
             android:text="@string/txt_buy_subscription"
             android:textAllCaps="false"
             android:textColor="@color/white"
+            android:layout_marginBottom="32dp"
             app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@id/tvUnblock" />
     </androidx.constraintlayout.widget.ConstraintLayout>
