--- a/app/src/main/res/layout/fragment_faq.xml
+++ b/app/src/main/res/layout/fragment_faq.xml
@@ -19,10 +19,10 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginStart="16sp"
-                android:layout_marginTop="32dp"
                 android:src="@drawable/ic_back_black"
+                app:layout_constraintBottom_toBottomOf="@id/title"
                 app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toTopOf="parent" />
+                app:layout_constraintTop_toTopOf="@id/title" />
 
             <androidx.appcompat.widget.AppCompatTextView
                 android:id="@+id/title"
@@ -49,39 +49,39 @@
                 <androidx.appcompat.widget.AppCompatTextView
                     android:id="@+id/about"
                     style="@style/StandartTextSize16"
-                    android:fontFamily="@font/montserrat_regular"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
+                    android:fontFamily="@font/montserrat_regular"
                     android:text="@string/what_is_mentalmind"
                     app:drawableEndCompat="@drawable/ic_array_down" />
 
                 <androidx.appcompat.widget.AppCompatTextView
                     android:id="@+id/aboutDescription"
                     style="@style/SmallRegularTextSize14"
-                    android:fontFamily="@font/montserrat_regular"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_marginTop="16dp"
+                    android:fontFamily="@font/montserrat_regular"
                     android:text="@string/mentalmind_description"
                     android:visibility="gone" />
 
                 <androidx.appcompat.widget.AppCompatTextView
                     android:id="@+id/whatIsInstruments"
                     style="@style/StandartTextSize16"
-                    android:fontFamily="@font/montserrat_regular"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:layout_marginTop="32dp"
+                    android:fontFamily="@font/montserrat_regular"
                     android:text="@string/what_is_instruments"
                     app:drawableEndCompat="@drawable/ic_array_down" />
 
                 <androidx.appcompat.widget.AppCompatTextView
                     android:id="@+id/aboutInstruments"
                     style="@style/SmallRegularTextSize14"
-                    android:fontFamily="@font/montserrat_regular"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_marginTop="16dp"
+                    android:fontFamily="@font/montserrat_regular"
                     android:text="@string/about_instruments"
                     android:visibility="gone" />
 
@@ -90,8 +90,8 @@
                     style="@style/StandartTextSize16"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:fontFamily="@font/montserrat_regular"
                     android:layout_marginTop="32dp"
+                    android:fontFamily="@font/montserrat_regular"
                     android:text="@string/how_long"
                     app:drawableEndCompat="@drawable/ic_array_down" />
 
@@ -99,9 +99,9 @@
                     android:id="@+id/aboutHowLong"
                     style="@style/SmallRegularTextSize14"
                     android:layout_width="wrap_content"
-                    android:fontFamily="@font/montserrat_regular"
                     android:layout_height="wrap_content"
                     android:layout_marginTop="16dp"
+                    android:fontFamily="@font/montserrat_regular"
                     android:text="@string/about_how_long"
                     android:visibility="gone" />
 
@@ -109,9 +109,9 @@
                     android:id="@+id/whatResult"
                     style="@style/StandartTextSize16"
                     android:layout_width="match_parent"
-                    android:fontFamily="@font/montserrat_regular"
                     android:layout_height="wrap_content"
                     android:layout_marginTop="32dp"
+                    android:fontFamily="@font/montserrat_regular"
                     android:text="@string/how_to_know"
                     app:drawableEndCompat="@drawable/ic_array_down" />
 
@@ -119,9 +119,9 @@
                     android:id="@+id/aboutResult"
                     style="@style/SmallRegularTextSize14"
                     android:layout_width="wrap_content"
-                    android:fontFamily="@font/montserrat_regular"
                     android:layout_height="wrap_content"
                     android:layout_marginTop="16dp"
+                    android:fontFamily="@font/montserrat_regular"
                     android:text="@string/about_result"
                     android:visibility="gone" />
             </LinearLayout>
