--- a/app/src/main/res/layout/fragment_help.xml
+++ b/app/src/main/res/layout/fragment_help.xml
@@ -8,7 +8,7 @@
 
     <ScrollView
         android:layout_width="match_parent"
-        android:layout_height="wrap_content">
+        android:layout_height="match_parent">
 
         <androidx.constraintlayout.widget.ConstraintLayout
             android:layout_width="match_parent"
@@ -19,10 +19,10 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginStart="16sp"
-                android:layout_marginTop="32dp"
                 android:src="@drawable/ic_back_black"
+                app:layout_constraintBottom_toBottomOf="@id/title"
                 app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toTopOf="parent" />
+                app:layout_constraintTop_toTopOf="@id/title" />
 
             <androidx.appcompat.widget.AppCompatTextView
                 android:id="@+id/title"
@@ -52,7 +52,7 @@
                     android:layout_height="wrap_content"
                     android:text="@string/write_to_us" />
 
-                <androidx.appcompat.widget.AppCompatEditText
+                <EditText
                     android:id="@+id/etHelp"
                     android:layout_width="match_parent"
                     android:layout_height="200dp"
@@ -60,6 +60,7 @@
                     android:background="@drawable/bg_edittext_gray_stroke"
                     android:gravity="top"
                     android:hint="@string/enter_text"
+                    android:imeOptions="actionDone"
                     android:paddingStart="12dp"
                     android:paddingTop="14dp"
                     android:paddingEnd="12dp"
@@ -81,9 +82,12 @@
             android:layout_alignParentBottom="true"
             android:layout_marginStart="16dp"
             android:layout_marginEnd="16dp"
-            android:layout_marginBottom="57dp"
             android:enabled="false"
+            android:layout_marginBottom="32dp"
+            android:fontFamily="@font/montserrat_regular"
             android:text="@string/txt_send"
+            android:textAllCaps="true"
+            android:textColor="@color/white"
             android:textSize="17sp" />
     </RelativeLayout>
 </FrameLayout>
