--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -62,6 +62,13 @@
         <item name="android:fontFamily">@font/montserrat_regular</item>
     </style>
 
+    <style name="TariffDescription" parent="AppTheme">
+        <item name="android:textSize">12sp</item>
+        <item name="android:textColor">@color/white</item>
+        <item name="android:fontFamily">@font/montserrat_regular</item>
+        <item name="fontWeight">400</item>
+    </style>
+
     <style name="ExtraSmallGrayTextSize12" parent="AppTheme">
         <item name="android:textSize">12sp</item>
         <item name="android:textColor">@color/colorStrongGray</item>
