--- a/app/src/main/res/layout/fragment_login_with_email.xml
+++ b/app/src/main/res/layout/fragment_login_with_email.xml
@@ -63,10 +63,12 @@
                 android:background="@drawable/login_et_background"
                 android:fontFamily="@font/montserrat_regular"
                 android:hint="@string/enter_your_email"
+                android:imeOptions="actionNext"
                 android:paddingStart="12dp"
                 android:paddingTop="14dp"
                 android:paddingEnd="12dp"
-                android:paddingBottom="14dp" />
+                android:paddingBottom="14dp"
+                android:singleLine="true" />
 
             <androidx.appcompat.widget.AppCompatTextView
                 android:layout_width="wrap_content"
@@ -91,10 +93,12 @@
                     android:layout_height="wrap_content"
                     android:background="@drawable/login_et_background"
                     android:hint="@string/enter_your_password"
+                    android:imeOptions="actionDone"
                     android:paddingStart="12dp"
                     android:paddingTop="14dp"
                     android:paddingEnd="12dp"
-                    android:paddingBottom="14dp" />
+                    android:paddingBottom="14dp"
+                    android:singleLine="true" />
             </com.google.android.material.textfield.TextInputLayout>
 
             <androidx.appcompat.widget.AppCompatTextView
