--- a/app/src/main/res/layout/fragment_settings.xml
+++ b/app/src/main/res/layout/fragment_settings.xml
@@ -8,17 +8,17 @@
 
     <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="match_parent"
-        android:layout_height="wrap_content">
+        android:layout_height="match_parent">
 
         <androidx.appcompat.widget.AppCompatImageView
             android:id="@+id/btnBack"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginStart="16sp"
-            android:layout_marginTop="38dp"
             android:src="@drawable/ic_back_black"
+            app:layout_constraintBottom_toBottomOf="@id/title"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toTopOf="parent" />
+            app:layout_constraintTop_toTopOf="@id/title" />
 
         <androidx.appcompat.widget.AppCompatTextView
             android:id="@+id/title"
@@ -31,11 +31,12 @@
             app:layout_constraintStart_toEndOf="@id/btnBack"
             app:layout_constraintTop_toTopOf="parent" />
 
+
         <LinearLayout
             android:id="@+id/llContainer"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_marginTop="40dp"
+            android:layout_marginTop="24dp"
             android:orientation="vertical"
             android:paddingStart="16dp"
             android:paddingEnd="16dp"
@@ -59,10 +60,12 @@
                 android:fontFamily="@font/montserrat_regular"
                 android:hint="@string/enter_name"
                 android:inputType="text"
+                android:imeOptions="actionNext"
                 android:paddingStart="12dp"
                 android:paddingTop="14dp"
                 android:paddingEnd="12dp"
-                android:paddingBottom="14dp" />
+                android:paddingBottom="14dp"
+                android:singleLine="true" />
 
             <androidx.appcompat.widget.AppCompatTextView
                 style="@style/SmallRegularTextSize14"
@@ -81,10 +84,12 @@
                 android:fontFamily="@font/montserrat_regular"
                 android:hint="@string/enter_birth_date"
                 android:inputType="text"
+                android:imeOptions="actionNext"
                 android:paddingStart="12dp"
                 android:paddingTop="14dp"
                 android:paddingEnd="12dp"
-                android:paddingBottom="14dp" />
+                android:paddingBottom="14dp"
+                android:singleLine="true" />
 
             <androidx.appcompat.widget.AppCompatTextView
                 style="@style/SmallRegularTextSize14"
@@ -97,13 +102,16 @@
             <LinearLayout
                 android:id="@+id/ll_regions"
                 android:layout_width="match_parent"
-                android:layout_height="wrap_content"
+                android:layout_height="46dp"
+                android:layout_marginTop="8dp"
                 android:background="@drawable/bg_edittext_stroke"
                 android:gravity="center"
                 android:minHeight="38dp"
                 android:orientation="horizontal"
-                android:paddingTop="10dp"
-                android:paddingBottom="10dp">
+                android:paddingStart="12dp"
+                android:paddingTop="14dp"
+                android:paddingEnd="12dp"
+                android:paddingBottom="14dp">
 
                 <Spinner
                     android:id="@+id/regions_spinner"
@@ -119,15 +127,6 @@
                     android:src="@drawable/ic_spinner_array" />
             </LinearLayout>
 
-            <androidx.appcompat.widget.AppCompatEditText
-                android:id="@+id/etCountry"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_marginTop="8dp"
-                android:background="@drawable/bg_edittext_stroke"
-                android:hint="@string/choose_from_list"
-                android:inputType="text" />
-
             <androidx.appcompat.widget.AppCompatTextView
                 style="@style/SmallRegularTextSize14"
                 android:layout_width="wrap_content"
@@ -136,35 +135,54 @@
                 android:fontFamily="@font/montserrat_regular"
                 android:text="@string/city" />
 
-            <androidx.appcompat.widget.AppCompatEditText
-                android:id="@+id/etCity"
+            <LinearLayout
+                android:id="@+id/ll_cities"
                 android:layout_width="match_parent"
-                android:layout_height="wrap_content"
+                android:layout_height="46dp"
                 android:layout_marginTop="8dp"
                 android:background="@drawable/bg_edittext_stroke"
-                android:fontFamily="@font/montserrat_regular"
-                android:hint="@string/choose_from_list"
-                android:inputType="text"
+                android:gravity="center"
+                android:minHeight="38dp"
+                android:orientation="horizontal"
                 android:paddingStart="12dp"
                 android:paddingTop="14dp"
                 android:paddingEnd="12dp"
-                android:paddingBottom="14dp" />
+                android:paddingBottom="14dp">
 
-            <androidx.appcompat.widget.AppCompatButton
-                android:id="@+id/changePassword"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_marginTop="52dp"
-                android:background="@drawable/bg_green_button"
-                android:drawableEnd="@drawable/ic_array_right_white"
-                android:fontFamily="@font/montserrat_regular"
-                android:gravity="start|center_vertical"
-                android:paddingStart="12dp"
-                android:paddingEnd="17dp"
-                android:text="@string/change_password"
-                android:textAllCaps="false"
-                android:textSize="20sp" />
+                <Spinner
+                    android:id="@+id/cities_spinner"
+                    android:layout_width="0dp"
+                    android:layout_height="match_parent"
+                    android:layout_weight="1"
+                    android:background="@null" />
+
+                <androidx.appcompat.widget.AppCompatImageView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:src="@drawable/ic_spinner_array" />
+            </LinearLayout>
         </LinearLayout>
+
+        <androidx.appcompat.widget.AppCompatButton
+            android:id="@+id/changePassword"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginStart="16dp"
+            android:layout_marginTop="52dp"
+            android:layout_marginEnd="16dp"
+            android:background="@drawable/bg_green_button"
+            android:drawableEnd="@drawable/ic_array_right_white"
+            android:fontFamily="@font/montserrat_regular"
+            android:gravity="start|center_vertical"
+            android:paddingStart="12dp"
+            android:paddingEnd="17dp"
+            android:text="@string/change_password"
+            android:textAllCaps="false"
+            android:textColor="@color/white"
+            android:textSize="20sp"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@id/llContainer" />
 
         <androidx.appcompat.widget.AppCompatButton
             android:id="@+id/btnSave"
