--- a/app/src/main/res/layout/item_mood.xml
+++ b/app/src/main/res/layout/item_mood.xml
@@ -22,7 +22,7 @@
         android:layout_gravity="center_vertical"
         android:layout_marginStart="8dp"
         android:fontFamily="@font/montserrat_regular"
-        android:maxLines="1"
+        android:singleLine="true"
         android:text="@string/menu_create"
         android:textColor="@color/black"
         android:textSize="@dimen/font_normal" />
