--- a/app/src/main/res/layout/activity_player.xml
+++ b/app/src/main/res/layout/activity_player.xml
@@ -26,14 +26,14 @@
             app:layout_constraintTop_toTopOf="parent" />
 
         <androidx.appcompat.widget.AppCompatImageView
-            android:id="@+id/addToFavorite"
+            android:id="@+id/favorite"
             android:layout_width="40dp"
             android:layout_height="40dp"
             android:layout_marginTop="50dp"
             android:layout_marginEnd="8dp"
             android:background="@drawable/bg_button_onboarding"
             android:padding="12dp"
-            android:src="@drawable/ic_favorite"
+            android:src="@drawable/ic_add_to_favorite"
             android:tint="@color/blueColor"
             app:layout_constraintEnd_toStartOf="@id/share"
             app:layout_constraintTop_toTopOf="parent" />
