--- a/app/src/main/res/layout/fragment_profile.xml
+++ b/app/src/main/res/layout/fragment_profile.xml
@@ -57,8 +57,11 @@
         <androidx.appcompat.widget.AppCompatTextView
             android:id="@+id/tvEmail"
             style="@style/MediumTitleTextSize18"
-            android:layout_width="wrap_content"
+            android:layout_width="0dp"
+            android:layout_marginEnd="16dp"
+            android:ellipsize="end"
             android:layout_height="wrap_content"
+            app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintBottom_toBottomOf="@id/ivProfilePhoto"
             app:layout_constraintStart_toStartOf="@id/tvLogin"
             app:layout_constraintTop_toBottomOf="@id/tvLogin"
