--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -115,6 +115,7 @@
     </style>
 
     //Font Styles
+
     <style name="ButtonsTextWeight500" parent="AppTheme">
         <item name="android:textSize">16sp</item>
         <item name="fontFamily">@font/montserrat_medium</item>
@@ -139,5 +140,9 @@
         <item name="color">@color/black</item>
     </style>
 
-
+    <style name="CustomRatingBarStyle" parent="@android:style/Widget.RatingBar">
+        <item name="android:progressDrawable">@drawable/custom_rating</item>
+        <item name="android:minHeight">24dp</item>
+        <item name="android:maxHeight">40dp</item>
+    </style>
 </resources>
