--- a/app/src/main/res/layout/activity_player.xml
+++ b/app/src/main/res/layout/activity_player.xml
@@ -5,6 +5,8 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="@drawable/cosmos"
+    android:clipChildren="false"
+    android:clipToPadding="false"
     tools:context=".ui.player.PlayerActivity">
 
     <androidx.constraintlayout.widget.ConstraintLayout
