--- a/app/src/main/res/layout/item_audio_track.xml
+++ b/app/src/main/res/layout/item_audio_track.xml
@@ -12,8 +12,9 @@
         android:id="@+id/controlView"
         android:layout_width="42dp"
         android:layout_height="42dp"
-        android:elevation="10dp"
-        android:src="@drawable/ic_play_rounded"
+        android:background="@drawable/white_circle"
+        android:elevation="3dp"
+        android:src="@drawable/ic_play"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
