--- a/app/src/main/res/layout/fragment_tariffs.xml
+++ b/app/src/main/res/layout/fragment_tariffs.xml
@@ -1,10 +1,11 @@
 <ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="@drawable/purchase_background"
     android:overScrollMode="never">
 
-    <androidx.constraintlayout.widget.ConstraintLayout xmlns:app="http://schemas.android.com/apk/res-auto"
+    <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content">
 
@@ -43,167 +44,210 @@
             android:paddingEnd="16dp"
             app:layout_constraintTop_toBottomOf="@id/trialVersionTitle">
 
-        <androidx.constraintlayout.widget.ConstraintLayout
-            android:id="@+id/first_tariff"
-            android:layout_width="0dp"
-            android:layout_height="wrap_content"
-            android:layout_marginTop="33dp"
-            android:layout_weight="1"
-            android:layout_marginEnd="16dp"
-            android:background="@drawable/ic_first_tariff_background"
-            android:paddingStart="16dp"
-            android:paddingEnd="16dp"
-            app:layout_constraintStart_toStartOf="parent">
-
-            <androidx.appcompat.widget.AppCompatTextView
-                android:id="@+id/monthSum"
-                style="@style/RegularBoldTextSize20"
-                android:layout_width="wrap_content"
+            <androidx.constraintlayout.widget.ConstraintLayout
+                android:id="@+id/first_tariff"
+                android:layout_width="0dp"
                 android:layout_height="wrap_content"
-                android:layout_marginStart="36dp"
-                android:layout_marginTop="62dp"
-                android:fontFamily="@font/montserrat_regular"
-                android:text="3 249"
-                android:textColor="@color/white"
-                android:textSize="28sp"
-                app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toTopOf="parent" />
+                android:layout_marginTop="33dp"
+                android:layout_marginEnd="8dp"
+                android:layout_weight="1"
+                app:layout_constraintStart_toStartOf="parent">
 
-            <androidx.appcompat.widget.AppCompatTextView
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_marginStart="4dp"
-                android:layout_marginTop="60dp"
-                android:layout_marginEnd="36dp"
-                android:text="₸"
-                android:textAllCaps="true"
-                android:textColor="@color/white"
-                android:textSize="18sp"
-                app:layout_constraintEnd_toEndOf="parent"
-                app:layout_constraintStart_toEndOf="@id/monthSum"
-                app:layout_constraintTop_toTopOf="parent" />
+                <androidx.constraintlayout.widget.ConstraintLayout
+                    android:layout_width="match_parent"
+                    android:layout_height="300dp"
+                    android:background="@drawable/ic_first_tariff_background"
+                    android:paddingStart="16dp"
+                    android:paddingEnd="16dp"
+                    app:layout_constraintEnd_toEndOf="parent"
+                    app:layout_constraintStart_toStartOf="parent"
+                    app:layout_constraintTop_toTopOf="parent">
 
-            <androidx.appcompat.widget.AppCompatTextView
-                android:id="@+id/tariffDesc"
-                style="@style/TariffDescription"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_marginTop="38dp"
-                android:gravity="center"
-                android:text="Доступ ко всем\n медитациям\n на целый месяц"
-                app:layout_constraintEnd_toEndOf="parent"
-                app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toBottomOf="@id/monthSum" />
+                    <androidx.appcompat.widget.AppCompatTextView
+                        android:id="@+id/monthSum1"
+                        style="@style/RegularBoldTextSize20"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_marginStart="36dp"
+                        android:layout_marginTop="62dp"
+                        android:fontFamily="@font/montserrat_regular"
+                        android:text="@string/ft_cost"
+                        android:textColor="@color/white"
+                        android:textSize="28sp"
+                        app:layout_constraintStart_toStartOf="parent"
+                        app:layout_constraintTop_toTopOf="parent" />
 
-            <androidx.appcompat.widget.AppCompatTextView
-                style="@style/TariffDescription"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_marginTop="12dp"
-                android:gravity="center"
-                android:text="Новые аффирмации\n каждый день"
-                app:layout_constraintEnd_toEndOf="parent"
-                app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toBottomOf="@id/tariffDesc" />
+                    <androidx.appcompat.widget.AppCompatTextView
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_marginStart="4dp"
+                        android:layout_marginTop="60dp"
+                        android:layout_marginEnd="36dp"
+                        android:text="@string/tenge_symbol"
+                        android:textAllCaps="true"
+                        android:textColor="@color/white"
+                        android:textSize="18sp"
+                        app:layout_constraintEnd_toEndOf="parent"
+                        app:layout_constraintStart_toEndOf="@id/monthSum1"
+                        app:layout_constraintTop_toTopOf="parent" />
 
-            <androidx.appcompat.widget.AppCompatTextView
-                android:id="@+id/btnSub1"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_marginTop="281dp"
-                android:background="@drawable/subscribe_bg"
-                android:gravity="center"
-                android:paddingStart="35dp"
-                android:paddingTop="15dp"
-                android:paddingEnd="35dp"
-                android:paddingBottom="15dp"
-                android:text="Подписаться"
-                android:textColor="#EF8D82"
-                android:textSize="9sp"
-                app:layout_constraintEnd_toEndOf="@id/first_tariff"
-                app:layout_constraintStart_toStartOf="@id/first_tariff"
-                app:layout_constraintTop_toTopOf="@id/first_tariff" />
-        </androidx.constraintlayout.widget.ConstraintLayout>
+                    <androidx.appcompat.widget.AppCompatTextView
+                        android:id="@+id/tariffDesc1"
+                        style="@style/TariffDescription"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_marginTop="38dp"
+                        android:gravity="center"
+                        android:text="@string/ft_description"
+                        app:layout_constraintEnd_toEndOf="parent"
+                        app:layout_constraintStart_toStartOf="parent"
+                        app:layout_constraintTop_toBottomOf="@id/monthSum1" />
+
+                    <androidx.appcompat.widget.AppCompatTextView
+                        android:id="@+id/tariffSecondaryDesc1"
+                        style="@style/TariffDescription"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_marginTop="12dp"
+                        android:gravity="center"
+                        android:text="@string/ft_secondary_description"
+                        app:layout_constraintEnd_toEndOf="parent"
+                        app:layout_constraintStart_toStartOf="parent"
+                        app:layout_constraintTop_toBottomOf="@id/tariffDesc1" />
+
+                    <androidx.appcompat.widget.AppCompatTextView
+                        android:id="@+id/duration1"
+                        style="@style/TariffDuration"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_marginTop="25dp"
+                        android:gravity="center"
+                        android:text="@string/ft_duration"
+                        android:textStyle="bold"
+                        app:layout_constraintEnd_toEndOf="parent"
+                        app:layout_constraintStart_toStartOf="parent"
+                        app:layout_constraintTop_toBottomOf="@id/tariffSecondaryDesc1" />
+                </androidx.constraintlayout.widget.ConstraintLayout>
+
+                <androidx.appcompat.widget.AppCompatTextView
+                    android:id="@+id/btnSub1"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_marginTop="280dp"
+                    android:background="@drawable/subscribe_bg"
+                    android:gravity="center"
+                    android:paddingStart="26dp"
+                    android:paddingTop="14dp"
+                    android:paddingEnd="26dp"
+                    android:paddingBottom="11dp"
+                    android:text="@string/subscribe"
+                    android:textSize="9sp"
+                    app:layout_constraintEnd_toEndOf="parent"
+                    app:layout_constraintStart_toStartOf="parent"
+                    app:layout_constraintTop_toTopOf="parent" />
+            </androidx.constraintlayout.widget.ConstraintLayout>
 
             <androidx.constraintlayout.widget.ConstraintLayout
                 android:id="@+id/second_tariff"
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
                 android:layout_marginTop="33dp"
+                android:layout_marginStart="8dp"
                 android:layout_weight="1"
-                android:background="@drawable/ic_second_tariff_background"
-                android:paddingStart="16dp"
-                android:paddingEnd="16dp"
                 app:layout_constraintStart_toStartOf="parent">
 
-                <androidx.appcompat.widget.AppCompatTextView
-                    android:id="@+id/monthSum2"
-                    style="@style/RegularBoldTextSize20"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_marginStart="36dp"
-                    android:layout_marginTop="62dp"
-                    android:fontFamily="@font/montserrat_regular"
-                    android:text="3 249"
-                    android:textColor="@color/white"
-                    android:textSize="28sp"
-                    app:layout_constraintStart_toStartOf="parent"
-                    app:layout_constraintTop_toTopOf="parent" />
-
-                <androidx.appcompat.widget.AppCompatTextView
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_marginStart="4dp"
-                    android:layout_marginTop="60dp"
-                    android:layout_marginEnd="36dp"
-                    android:text="₸"
-                    android:textAllCaps="true"
-                    android:textColor="@color/white"
-                    android:textSize="18sp"
-                    app:layout_constraintEnd_toEndOf="parent"
-                    app:layout_constraintStart_toEndOf="@id/monthSum2"
-                    app:layout_constraintTop_toTopOf="parent" />
-
-                <androidx.appcompat.widget.AppCompatTextView
-                    android:id="@+id/tariffDesc2"
-                    style="@style/TariffDescription"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_marginTop="38dp"
-                    android:gravity="center"
-                    android:text="+ 1 месяц доступа в подарок"
+                <androidx.constraintlayout.widget.ConstraintLayout
+                    android:layout_width="match_parent"
+                    android:layout_height="300dp"
+                    android:background="@drawable/ic_second_tariff_background"
+                    android:paddingStart="16dp"
+                    android:paddingEnd="16dp"
                     app:layout_constraintEnd_toEndOf="parent"
                     app:layout_constraintStart_toStartOf="parent"
-                    app:layout_constraintTop_toBottomOf="@id/monthSum2" />
+                    app:layout_constraintTop_toTopOf="parent">
 
-                <androidx.appcompat.widget.AppCompatTextView
-                    style="@style/TariffDescription"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_marginTop="12dp"
-                    android:gravity="center"
-                    android:text="Доступ ко всем\n медитациям\n на целый год"
-                    app:layout_constraintEnd_toEndOf="parent"
-                    app:layout_constraintStart_toStartOf="parent"
-                    app:layout_constraintTop_toBottomOf="@id/tariffDesc2" />
+                    <androidx.appcompat.widget.AppCompatTextView
+                        android:id="@+id/monthSum2"
+                        style="@style/RegularBoldTextSize20"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_marginStart="36dp"
+                        android:layout_marginTop="62dp"
+                        android:fontFamily="@font/montserrat_regular"
+                        android:text="@string/st_cost"
+                        android:textColor="@color/white"
+                        android:textSize="28sp"
+                        app:layout_constraintStart_toStartOf="parent"
+                        app:layout_constraintTop_toTopOf="parent" />
+
+                    <androidx.appcompat.widget.AppCompatTextView
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_marginStart="4dp"
+                        android:layout_marginTop="60dp"
+                        android:layout_marginEnd="36dp"
+                        android:text="₸"
+                        android:textAllCaps="true"
+                        android:textColor="@color/white"
+                        android:textSize="18sp"
+                        app:layout_constraintEnd_toEndOf="parent"
+                        app:layout_constraintStart_toEndOf="@id/monthSum2"
+                        app:layout_constraintTop_toTopOf="parent" />
+
+                    <androidx.appcompat.widget.AppCompatTextView
+                        android:id="@+id/tariffDesc2"
+                        style="@style/TariffDescription"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_marginTop="38dp"
+                        android:gravity="center"
+                        android:text="@string/st_description"
+                        app:layout_constraintEnd_toEndOf="parent"
+                        app:layout_constraintStart_toStartOf="parent"
+                        app:layout_constraintTop_toBottomOf="@id/monthSum2" />
+
+                    <androidx.appcompat.widget.AppCompatTextView
+                        android:id="@+id/tariffSecondaryDesc2"
+                        style="@style/TariffDescription"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_marginTop="12dp"
+                        android:gravity="center"
+                        android:text="@string/st_secondary_description"
+                        app:layout_constraintEnd_toEndOf="parent"
+                        app:layout_constraintStart_toStartOf="parent"
+                        app:layout_constraintTop_toBottomOf="@id/tariffDesc2" />
+
+                    <androidx.appcompat.widget.AppCompatTextView
+                        android:id="@+id/duration2"
+                        style="@style/TariffDuration"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_marginTop="25dp"
+                        android:gravity="center"
+                        android:text="@string/st_duration"
+                        android:textStyle="bold"
+                        app:layout_constraintEnd_toEndOf="parent"
+                        app:layout_constraintStart_toStartOf="parent"
+                        app:layout_constraintTop_toBottomOf="@id/tariffSecondaryDesc2" />
+                </androidx.constraintlayout.widget.ConstraintLayout>
 
                 <androidx.appcompat.widget.AppCompatTextView
                     android:id="@+id/btnSub2"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:layout_marginTop="281dp"
+                    android:layout_marginTop="280dp"
                     android:background="@drawable/subscribe_bg"
                     android:gravity="center"
-                    android:paddingStart="35dp"
-                    android:paddingTop="15dp"
-                    android:paddingEnd="35dp"
-                    android:paddingBottom="15dp"
-                    android:text="Подписаться"
-                    android:textColor="#EF8D82"
+                    android:paddingStart="26dp"
+                    android:paddingTop="14dp"
+                    android:paddingEnd="26dp"
+                    android:paddingBottom="11dp"
+                    android:text="@string/subscribe"
                     android:textSize="9sp"
-                    app:layout_constraintEnd_toEndOf="@id/second_tariff"
-                    app:layout_constraintStart_toStartOf="@id/second_tariff"
-                    app:layout_constraintTop_toTopOf="@id/second_tariff" />
+                    app:layout_constraintEnd_toEndOf="parent"
+                    app:layout_constraintStart_toStartOf="parent"
+                    app:layout_constraintTop_toTopOf="parent" />
             </androidx.constraintlayout.widget.ConstraintLayout>
         </LinearLayout>
 
