--- a/app/src/main/res/layout/fragment_meditation_notify.xml
+++ b/app/src/main/res/layout/fragment_meditation_notify.xml
@@ -43,4 +43,108 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@id/title" />
 
+    <ScrollView
+        android:layout_width="match_parent"
+        android:layout_height="0dp"
+        android:layout_marginTop="40dp"
+        android:layout_marginBottom="16dp"
+        android:overScrollMode="never"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@id/timePicker">
+
+        <RadioGroup
+            android:id="@+id/bg_weekend"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:orientation="vertical"
+            android:paddingStart="16dp"
+            android:paddingEnd="16dp">
+
+            <RadioButton
+                android:id="@+id/monday"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:button="@drawable/radio_button"
+                android:paddingHorizontal="12dp"
+                android:tag="monday"
+                android:text="@string/Monday"
+                android:textColor="@color/white"
+                android:textSize="17sp" />
+
+            <RadioButton
+                android:id="@+id/tuesday"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="16dp"
+                android:button="@drawable/radio_button"
+                android:paddingHorizontal="12dp"
+                android:tag="tuesday"
+                android:text="@string/Tuesday"
+                android:textColor="@color/white"
+                android:textSize="17sp" />
+
+            <RadioButton
+                android:id="@+id/wednesday"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="16dp"
+                android:button="@drawable/radio_button"
+                android:paddingHorizontal="12dp"
+                android:tag="wednesday"
+                android:text="@string/Wednesday"
+                android:textColor="@color/white"
+                android:textSize="17sp" />
+
+            <RadioButton
+                android:id="@+id/thursday"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="16dp"
+                android:button="@drawable/radio_button"
+                android:paddingHorizontal="12dp"
+                android:tag="thursday"
+                android:text="@string/Thursday"
+                android:textColor="@color/white"
+                android:textSize="17sp" />
+
+            <RadioButton
+                android:id="@+id/friday"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="16dp"
+                android:button="@drawable/radio_button"
+                android:paddingHorizontal="12dp"
+                android:tag="friday"
+                android:text="@string/Friday"
+                android:textColor="@color/white"
+                android:textSize="17sp" />
+
+            <RadioButton
+                android:id="@+id/saturday"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="16dp"
+                android:button="@drawable/radio_button"
+                android:paddingHorizontal="12dp"
+                android:tag="saturday"
+                android:text="@string/Saturday"
+                android:textColor="@color/white"
+                android:textSize="17sp" />
+
+            <RadioButton
+                android:id="@+id/sunday"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="16dp"
+                android:button="@drawable/radio_button"
+                android:paddingHorizontal="12dp"
+                android:tag="sunday"
+                android:text="@string/Sunday"
+                android:textColor="@color/white"
+                android:textSize="17sp" />
+        </RadioGroup>
+    </ScrollView>
+
 </androidx.constraintlayout.widget.ConstraintLayout>
